* Added crop to selection to the rotation geometric transform
* Added a way to clean sequence file in the sequence tab (see also command seqclean)
* Added a warning when images are negative on calibration
* Added calibration details in the FITS history
* Added saving formulas (presets) in Pixel Math
* Added solar system object search from online service for image annotations
* Updated scripts to specify cosmetic correction is from masterdark with -cc=dark option
* Updated seq file version to v4. Registration block keeps homography information
* Refactored global registration and added 2pass and Apply Existing methods
* Refactored 3-star registration to run the 3 stars analysis successively
* Refactored PCC, using WCS information to identify stars instead of registration match
* Refactored settings, preferences and configuration file, adding get and set commands
* Refactored commands error handling
* Refactored light curve creation, filtering the reference stars to valid only
* Added background level and number of stars to stored registation data and plots
* Added commands: [update with https://free-astro.org/index.php?title=Siril:Commands#Commands_history ]
* Added KOMBAT alogrithm for registration and removed deprecated ECC
* Added choosing server to query object in astrometry
* Added shortcuts for astrometry (regular and photometric correction)
* Added option "full" to export all possible stats in seqstat command
* Added argument to executable to pass pipes path, allowing several instances to run simultaneously
* Added more reporting on online object search, avoiding duplicates in catalogues
* Replaced generalized hyperbolic transform stretch method by more general algorithms and optimised for speed
* Added improved graphical interface to hyperbolic stretches
* Altered behaviour of channel select toggles in histogram and hyperbolic stretch tools, allowing stretching only selected channels (this is useful in NB workflows etc.)
* Replaced Libraw with RT debayering