@@ -20363,6 +20363,7 @@ To be enabled, the reference image must have been explicitly set and already dis
                                                     <property name="can-focus">False</property>
                                                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK</property>
                                                     <signal name="button-press-event" handler="on_DrawingPlot_button_press_event" swapped="no"/>
+                                                    <signal name="button-release-event" handler="on_DrawingPlot_button_release_event" swapped="no"/>
                                                     <signal name="draw" handler="on_DrawingPlot_draw" swapped="no"/>
                                                     <signal name="enter-notify-event" handler="on_DrawingPlot_enter_notify_event" swapped="no"/>
                                                     <signal name="leave-notify-event" handler="on_DrawingPlot_leave_notify_event" swapped="no"/>
